# DirectChat

./: .gitignore  README.md  docker-compose.yml  instructions.md
app/: index.js  package-lock.json  package.json
app/client/: client.js
app/nodes/: node.js
app/nodes/middlewares/: index.js  middleware.js  (+2 more)
app/services/: axios-wrapper.js  util.js
app/test/: axios-mock.js  client.js  middleware.js  node.js  util.js
app/tests/: index.js  node.js
server/: .gitignore  Cargo.toml  Dockerfile  README.md  entryfile.sh  entrypoint.sh  init.sql
server/migrations/2018-10-17-172717_clients/: down.sql  up.sql
server/migrations/2018-10-17-173238_client_ip/: down.sql
server/migrations/2018-10-22-191704_clients/: up.sql
server/migrations/2018-10-22-194241_add-clients/: down.sql  up.sql
server/migrations/2018-10-23-180205_clients_ip/: up.sql
server/migrations/2018-10-23-180216_friend_binding/: down.sql  up.sql
server/migrations/2018-10-23-191913_fill_clientip/: down.sql  up.sql
server/migrations/2018-10-23-191943_fill_friendbinding/: down.sql  up.sql
server/src/: api_test.go  client.rs  client_ip.rs  db.rs  db_test.go  friend_binding.rs  lib.rs  main.go  main.rs  main_test.go  schema.rs
server/src/app/: application.go  auth.go  errors.go
server/src/controllers/: authControllers.go  clientControllers.go  friendControllers.go
server/src/models/: base.go  clients.go  friendship.go  ip.go
server/src/services/: clientServices.go
server/src/utils/: util.go
views/vue-frontend/: README.md  env.js  index.html  package-lock.json  package.json
(+37 files in other folders)
