
[package]
name = "server"
version = "0.1.0"
authors = ["Fabien <fabien.ogli@etu.univ-lyon1.fr>"]

[dependencies]
dotenv = "0.1.0"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.0.0", features = ["mysql"] }
r2d2 = "*"
r2d2-diesel = "*"
